kubernetes/mongodb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-mongodb
spec:
  selector:
    app.kubernetes.io/component: mongodb
    app.kubernetes.io/instance: my-mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
