kubernetes/mongoexpress.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongoexpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongoexpress
  template:
    metadata:
      labels:
        app: mongoexpress
    spec:
      containers:
      - name: mongoexpress
        image: mongo-express:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: mongoexpress
spec:
  selector:
    app: mongoexpress
  ports:
    - port: 8081
      targetPort: 8081
  type: ClusterIP
